// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout|Table As CSS Grid 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-size: 14px;
  font-weight: 600;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  min-width: 100%;
  overflow-x: scroll;
  border: none;
  border-spacing: 0;
}

.c0 tr:hover td {
  background-color: #f6f8f9;
}

.__asGrid .c1 {
  display: contents;
}

.__asGrid .c5 {
  display: contents;
}

.__asGrid .c2 {
  display: contents;
}

.c4 {
  border: solid rgba(0,0,0,0.08);
  border-width: 0 0 1px;
  padding: 8px 16px;
  line-height: 1.5;
  white-space: nowrap;
}

.c7 {
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 8px 16px;
  line-height: 1.5;
  height: 64px;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
}

.c8 {
  font-weight: 700;
  color: #2f313a;
}

@supports (display:contents) {
  .c0.__asGrid {
    display: grid;
    grid-template-columns: minmax(150px,1fr) max-content;
  }
}

<table
  className="c0  __asGrid"
>
  <thead
    className="c1 "
  >
    <tr
      className="c2 "
    >
      <th
        className="c3 c4"
        fontSize={14}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Fruit
      </th>
      <th
        className="c3 c4"
        fontSize={14}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    className="c5 "
  >
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Apple
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.50
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Banana
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.60
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Cherry
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 9,999.99
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Coconut
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 2.30
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Layout|Table Basic 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-size: 14px;
  font-weight: 600;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  min-width: 100%;
  overflow-x: scroll;
  border: none;
  border-spacing: 0;
}

.c0 tr:hover td {
  background-color: #f6f8f9;
}

.__asGrid .c1 {
  display: contents;
}

.__asGrid .c5 {
  display: contents;
}

.__asGrid .c2 {
  display: contents;
}

.c4 {
  border: solid rgba(0,0,0,0.08);
  border-width: 0 0 1px;
  padding: 8px 16px;
  line-height: 1.5;
  white-space: nowrap;
}

.c7 {
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 8px 16px;
  line-height: 1.5;
  height: 64px;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
}

.c8 {
  font-weight: 700;
  color: #2f313a;
}

@supports (display:contents) {
  .c0.__asGrid {
    display: grid;
  }
}

<table
  className="c0  "
>
  <thead
    className="c1 "
  >
    <tr
      className="c2 "
    >
      <th
        className="c3 c4"
        fontSize={14}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Fruit
      </th>
      <th
        className="c3 c4"
        fontSize={14}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    className="c5 "
  >
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Apple
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.50
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Banana
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.60
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Cherry
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 9,999.99
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Coconut
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 2.30
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Layout|Table Extending Style 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-size: 14px;
  font-weight: 600;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  min-width: 100%;
  overflow-x: scroll;
  border: none;
  border-spacing: 0;
}

.c0 tr:hover td {
  background-color: #f6f8f9;
}

.__asGrid .c1 {
  display: contents;
}

.__asGrid .c5 {
  display: contents;
}

.__asGrid .c2 {
  display: contents;
}

.c4 {
  border: solid rgba(0,0,0,0.08);
  border-width: 0 0 1px;
  padding: 8px 16px;
  line-height: 1.5;
  white-space: nowrap;
}

.c7 {
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 8px 16px;
  line-height: 1.5;
  height: 64px;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
}

.c8 {
  color: tomato;
}

@supports (display:contents) {
  .c0.__asGrid {
    display: grid;
  }
}

<table
  className="c0  "
>
  <thead
    className="c1 "
  >
    <tr
      className="c2 "
    >
      <th
        className="c3 c4"
        fontSize={14}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Fruit
      </th>
      <th
        className="c3 c4"
        fontSize={14}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    className="c5 "
  >
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Apple
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.50
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Banana
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.60
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Cherry
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 9,999.99
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Coconut
      </td>
      <td
        className="c6 c7 c8"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 2.30
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Layout|Table useTableMap Hook 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-size: 14px;
  font-weight: 600;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  min-width: 100%;
  overflow-x: scroll;
  border: none;
  border-spacing: 0;
}

.c0 tr:hover td {
  background-color: #f6f8f9;
}

.__asGrid .c1 {
  display: contents;
}

.__asGrid .c5 {
  display: contents;
}

.__asGrid .c2 {
  display: contents;
}

.c4 {
  border: solid rgba(0,0,0,0.08);
  border-width: 0 0 1px;
  padding: 8px 16px;
  line-height: 1.5;
  white-space: nowrap;
}

.c7 {
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 8px 16px;
  line-height: 1.5;
  height: 64px;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
}

@supports (display:contents) {
  .c0.__asGrid {
    display: grid;
  }
}

<table
  className="c0  "
>
  <thead
    className="c1 "
  >
    <tr
      className="c2 "
    >
      <th
        className="c3 c4"
        fontSize={14}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Fruit
      </th>
      <th
        className="c3 c4"
        fontSize={14}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Price
      </th>
      <th
        className="c3 c4"
        fontSize={14}
        fontWeight="600"
        size={18}
        type="#2f313a"
      />
       
    </tr>
  </thead>
  <tbody
    className="c5 "
  >
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Apple
      </td>
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.50
      </td>
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        <button
          disabled={false}
          onClick={[Function]}
        >
          Add to cart
        </button>
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Banana
      </td>
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.60
      </td>
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        <button
          disabled={false}
          onClick={[Function]}
        >
          Add to cart
        </button>
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Cherry
      </td>
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 9,999.99
      </td>
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        <button
          disabled={false}
          onClick={[Function]}
        >
          Add to cart
        </button>
      </td>
    </tr>
    <tr
      className="c2 "
    >
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Coconut
      </td>
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        N/A
      </td>
      <td
        className="c6 c7"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        <button
          disabled={true}
          onClick={[Function]}
        >
          Add to cart
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;
